--- a/helloNodeJs/package.json
+++ b/helloNodeJs/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
